--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@babel/preset-env": "^7.16.5",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.4.5",
-    "babel-preset-env": "^1.7.0",
-    "node-fetch": "^3.1.0"
+    "babel-preset-env": "^1.7.0"
   }
 }
