--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.7",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.4.5",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "react": "^17.0.2",
+    "react-test-renderer": "^17.0.2"
   }
 }
